force-app/main/default/objects/ST_yojitsu__c/ST_yojitsu__c.object-meta.xml
<CustomObject>
    <label>ST予実管理</label>
    <nameField>
        <displayFormat>ST-{0000000}</displayFormat>
        <label>ST予実管理名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>