force-app/main/default/objects/ST_yojitsu__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>取引先</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>ST予実管理</relationshipLabel>
    <relationshipName>ST_Account_yojitsus</relationshipName>
    <type>Lookup</type>
</CustomField>