force-app/main/default/objects/ST_yojitsu__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>商談</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>ST予実管理</relationshipLabel>
    <relationshipName>OpportunitySTYojitsus</relationshipName>
    <type>Lookup</type>
</CustomField>