force-app/main/default/objects/ST_yojitsu__c/fields/ST_Orderamounttarget__c.field-meta.xml
<CustomField>
    <fullName>ST_Orderamounttarget__c</fullName>
    <label>受注金額目標</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>