force-app/main/default/objects/ST_yojitsu__c/fields/ST_Orderquantitytarget__c.field-meta.xml
<CustomField>
    <fullName>ST_Orderquantitytarget__c</fullName>
    <label>受注数量目標</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>