force-app/main/default/objects/ST_yojitsu__c/fields/ST_suryou__c.field-meta.xml
<CustomField>
    <fullName>ST_suryou__c</fullName>
    <label>数量</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>