force-app/main/default/objects/ST_yojitsu__c/fields/ST_zyutyuubi__c.field-meta.xml
<CustomField>
    <fullName>ST_zyutyuubi__c</fullName>
    <label>受注日</label>
    <type>Date</type>
</CustomField>