force-app/main/default/objects/ST_yojitsu__c/recordTypes/ST_jissekin.recordType-meta.xml
<RecordType>
    <fullName>ST_jissekin</fullName>
    <active>true</active>
    <label>ST実績入力</label>
</RecordType>