force-app/main/default/objects/ST_yojitsu__c/recordTypes/ST_yosan.recordType-meta.xml
<RecordType>
    <fullName>ST_yosan</fullName>
    <active>true</active>
    <label>ST予算入力</label>
</RecordType>