force-app/main/default/objects/ST_yojitsu__c/listViews/ViewYousan.listView-meta.xml
<ListView>
    <fullName>ViewYousan</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Opportunity__c</columns>
    <columns>ST_Orderamounttarget__c</columns>
    <columns>ST_Targetnumberoforders__c</columns>
    <columns>ST_Orderquantitytarget__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>ST_yojitsu__c.ST_yosan</value>
    </filters>
    <label>予算</label>
</ListView>